from laberinto import Laberinto
from elemento_laberinto import Pared, Jugador, EspacioLibre, Meta

class LaberintoManager:
    def __init__(self):
        self.laberinto = None

    def cargar_laberinto_desde_archivo(self, archivo):
        # Lógica para cargar el laberinto desde un archivo
        pass

    def dibujar_laberinto(self):
        # Lógica para dibujar el laberinto
        pass

    def mover_jugador(self, direccion):
        # Lógica para mover el jugador
        pass
