class Laberinto:
    def __init__(self, matriz):
        self.matriz = matriz

    def mostrar_laberinto(self):
        # Lógica para mostrar el laberinto
        pass
